исправил составления transition

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 width="370"
                 height="294"
               />
-              <div><p>Десктопні додатки</p></div>
+              <p class="products-desc">Десктопні додатки</p>
             </li>
 
             <li>
@@ -155,7 +155,7 @@
                 width="370"
                 height="294"
               />
-              <div><p>Мобільні додатки</p></div>
+              <p class="products-desc">Мобільні додатки</p>
             </li>
 
             <li>
@@ -165,7 +165,7 @@
                 width="370"
                 height="294"
               />
-              <div><p>Дизайнерські рішення</p></div>
+              <p class="products-desc">Дизайнерські рішення</p>
             </li>
           </ul>
         </div>
@@ -190,7 +190,7 @@
                 </p>
                 <ul class="list list-socseti">
                   <li>
-                    <a class="box-socseti" href=""
+                    <a class="box-socseti team-socseti" href=""
                       ><svg class="icon-socseti" width="20px" height="20px">
                         <use
                           href="./images/icons.svg#icon-instagram"
@@ -198,19 +198,19 @@
                     ></a>
                   </li>
                   <li>
-                    <a class="box-socseti" href=""
+                    <a class="box-socseti team-socseti" href=""
                       ><svg class="icon-socseti" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-twitter"></use></svg
                     ></a>
                   </li>
                   <li>
-                    <a class="box-socseti" href=""
+                    <a class="box-socseti team-socseti" href=""
                       ><svg class="icon-socseti" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-facebook"></use></svg
                     ></a>
                   </li>
                   <li>
-                    <a class="box-socseti" href=""
+                    <a class="box-socseti team-socseti" href=""
                       ><svg class="icon-socseti" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-linkedin"></use></svg
                     ></a>
@@ -233,7 +233,7 @@
                 </p>
                 <ul class="list list-socseti">
                   <li>
-                    <a class="box-socseti" href=""
+                    <a class="box-socseti team-socseti" href=""
                       ><svg class="icon-socseti" width="20px" height="20px">
                         <use
                           href="./images/icons.svg#icon-instagram"
@@ -241,19 +241,19 @@
                     ></a>
                   </li>
                   <li>
-                    <a class="box-socseti" href=""
+                    <a class="box-socseti team-socseti" href=""
                       ><svg class="icon-socseti" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-twitter"></use></svg
                     ></a>
                   </li>
                   <li>
-                    <a class="box-socseti" href=""
+                    <a class="box-socseti team-socseti" href=""
                       ><svg class="icon-socseti" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-facebook"></use></svg
                     ></a>
                   </li>
                   <li>
-                    <a class="box-socseti" href=""
+                    <a class="box-socseti team-socseti" href=""
                       ><svg class="icon-socseti" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-linkedin"></use></svg
                     ></a>
@@ -274,7 +274,7 @@
                 <p class="description team-description">Marketing</p>
                 <ul class="list list-socseti">
                   <li>
-                    <a class="box-socseti" href=""
+                    <a class="box-socseti team-socseti" href=""
                       ><svg class="icon-socseti" width="20px" height="20px">
                         <use
                           href="./images/icons.svg#icon-instagram"
@@ -282,19 +282,19 @@
                     ></a>
                   </li>
                   <li>
-                    <a class="box-socseti" href=""
+                    <a class="box-socseti team-socseti" href=""
                       ><svg class="icon-socseti" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-twitter"></use></svg
                     ></a>
                   </li>
                   <li>
-                    <a class="box-socseti" href=""
+                    <a class="box-socseti team-socseti" href=""
                       ><svg class="icon-socseti" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-facebook"></use></svg
                     ></a>
                   </li>
                   <li>
-                    <a class="box-socseti" href=""
+                    <a class="box-socseti team-socseti" href=""
                       ><svg class="icon-socseti" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-linkedin"></use></svg
                     ></a>
@@ -317,7 +317,7 @@
                 </p>
                 <ul class="list list-socseti">
                   <li>
-                    <a class="box-socseti" href=""
+                    <a class="box-socseti team-socseti" href=""
                       ><svg class="icon-socseti" width="20px" height="20px">
                         <use
                           href="./images/icons.svg#icon-instagram"
@@ -325,19 +325,19 @@
                     ></a>
                   </li>
                   <li>
-                    <a class="box-socseti" href=""
+                    <a class="box-socseti team-socseti" href=""
                       ><svg class="icon-socseti" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-twitter"></use></svg
                     ></a>
                   </li>
                   <li>
-                    <a class="box-socseti" href=""
+                    <a class="box-socseti team-socseti" href=""
                       ><svg class="icon-socseti" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-facebook"></use></svg
                     ></a>
                   </li>
                   <li>
-                    <a class="box-socseti" href=""
+                    <a class="box-socseti team-socseti" href=""
                       ><svg class="icon-socseti" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-linkedin"></use></svg
                     ></a>
